# pm-amm

./: .env.example  .gitignore  Anchor.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPRINT_STATUS.md  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  test.yml
anchor/: Anchor.toml  package.json  pnpm-lock.yaml
anchor/programs/pm_amm/: Cargo.toml
anchor/scripts/: add-usdc-metadata.ts  mint-usdc.ts  seed-devnet.ts  seed-markets.ts  update-usdc-metadata.ts
anchor/tests/: pm_amm.ts
app/: eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
app/public/tokens/: no.json  usdc-mock.json  yes.json
app/src/app/: error.tsx  globals.css  layout.tsx  opengraph-image.tsx  page.tsx  providers.tsx
app/src/components/: header.tsx  lp-panel.tsx  market-card.tsx  market-detail-panel.tsx  market-projections.tsx  market-table.tsx  portfolio-panel.tsx  position-card.tsx  (+4 more)
doc/: design-brief.md  prd.md  wp-para.md
doc/design_handoff_pmamm_brand/: README.md
doc/sprints/: sprint-01.md  sprint-02.md  sprint-03.md  sprint-04.md  sprint-05.md  sprint-06.md  sprint-07.md  sprint-08.md  sprint-09.md  sprint-10.md  sprint-11.md  sprint-12.md  sprint-13.md  sprint-14-brand-refactor.md  sprint-15.md
idl/: pm_amm.json
oracle/: pm_amm_math.py  test_oracle.py  test_properties.py  test_vectors.json
programs/pm_amm/: Cargo.toml
programs/pm_amm/src/: errors.rs  lib.rs
programs/pm_amm/src/instructions/: mod.rs
tests/: pm_amm.ts
(+62 files in other folders)
