[package]
name = "pm_amm"
version = "0.1.0"
description = "Paradigm dynamic pm-AMM on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pm_amm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31"
anchor-spl = "0.31"
fixed = "1"
